[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Brook Heisler <brookheisler@gmail.com>"]
name = "criterion"
version = "0.3.3"
edition = "2018"

description = "Statistics-driven micro-benchmarking library"
homepage = "https://bheisler.github.io/criterion.rs/book/index.html"
repository = "https://github.com/bheisler/criterion.rs"
readme = "README.md"
keywords = ["criterion", "benchmark"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"
exclude = ["book/*"]

[dependencies]
lazy_static = "1.4"
criterion-plot = { path="plot", version="0.4.3" }
itertools = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
atty = "0.2"
clap = { version = "2.33", default-features = false }
csv = "1.1"
walkdir = "2.3"
tinytemplate = "1.1"
cast = "0.2"
num-traits = { version = "0.2", default-features = false }
oorandom = "11.1"
rayon = "1.3"
regex = { version = "1.3", default-features = false, features = ["std"] }
futures = { version = "0.3", default_features = false, optional = true }
smol = { version = "1.2", default-features = false, optional = true }
tokio = { version = "1.0", default-features = false, features = ["rt"], optional = true }
async-std = { version = "1.9", optional = true }

[dependencies.plotters]
version = "^0.2.12"
default-features = false
features = ["svg", "area_series", "line_series"] 

[dev-dependencies]
tempfile = "3.1"
approx = "0.3"
quickcheck = { version = "0.9", default-features = false }
rand = "0.7"
futures = { version = "0.3", default_features = false, features = ["executor"] }

[badges]
travis-ci = { repository = "bheisler/criterion.rs" }
appveyor = { repository = "bheisler/criterion.rs", id = "4255ads9ctpupcl2" }
maintenance = { status = "passively-maintained" }

[features]
default = []

# Enable use of the nightly-only test::black_box function to discourage compiler optimizations.
real_blackbox = []

# Enable async/await support
async = ["futures"]

# These features enable built-in support for running async benchmarks on each different async 
# runtime.
async_futures = ["futures/executor", "async"]
async_smol = ["smol", "async"]
async_tokio = ["tokio", "async"]
async_std = ["async-std", "async"]

[workspace]
exclude = ["cargo-criterion"]

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false

# Enable all of the async runtimes for the docs.rs output
[package.metadata.docs.rs]
features = ["async_futures", "async_smol", "async_std", "async_tokio"]