[package]
authors = [
  "Jorge Aparicio <japaricious@gmail.com>",
  "Brook Heisler <brookheisler@gmail.com>",
]
name = "criterion"
# When bumping:
#
# * Update version numbers in the book;
version = "0.5.1"
edition = "2021"
rust-version = "1.70"

description = "Statistics-driven micro-benchmarking library"
homepage    = "https://bheisler.github.io/criterion.rs/book/index.html"
repository  = "https://github.com/bheisler/criterion.rs"
readme      = "README.md"
keywords    = ["criterion", "benchmark"]
categories  = ["development-tools::profiling"]
license     = "Apache-2.0 OR MIT"
exclude     = ["book/*"]

[dependencies]
anes           = "0.1.4"
criterion-plot = { path = "plot", version = "0.5.0" }
itertools      = "0.13"
serde          = { version = "1.0.100", features = ["derive"] }
serde_json     = "1.0.100"
ciborium       = "0.2.0"
clap           = { version = "=4.4.9", default-features = false, features = ["std", "help"] }
walkdir        = "2.3"
tinytemplate   = "1.1"
cast           = "0.3"
num-traits     = { version = "0.2", default-features = false, features = ["std"] }
oorandom       = "11.1"
regex          = { version = "1.5.1", default-features = false, features = ["std"] }

# Optional dependencies
rayon = { version = "1.3", optional = true }
csv = { version = "1.1", optional = true }
futures = { version = "0.3", default-features = false, features = ["executor"], optional = true }
smol = { version = "2.0", default-features = false, optional = true }
tokio = { version = "1.0", default-features = false, features = [
  "rt",
], optional = true }
async-std = { version = "1.13", optional = true }

[dependencies.plotters]
version          = "^0.3.2"
optional         = true
default-features = false
features         = ["svg_backend", "area_series", "line_series"]

[dev-dependencies]
tempfile   = "3.5.0"
approx     = "0.5.0"
quickcheck = { version = "1.0", default-features = false }
rand       = "0.8"
futures    = "0.3"

[badges]
maintenance = { status = "passively-maintained" }

[features]
stable = [
  "csv_output",
  "html_reports",
  "async_futures",
  "async_smol",
  "async_tokio",
  "async_std",
]
default = ["rayon", "plotters", "cargo_bench_support"]

# This is a legacy feature that no longer does anything, but removing it would be a semver break.
real_blackbox = []

# Enable rayon support
rayon = ["dep:rayon"]

# Enable plotters support
plotters = ["dep:plotters"]

# Enable async/await support
async = []

# These features enable built-in support for running async benchmarks on each different async
# runtime.
async_futures = ["dep:futures", "async"]
async_smol    = ["dep:smol", "async"]
async_tokio   = ["dep:tokio", "async"]
async_std     = ["dep:async-std", "async"]

# Make Criterion.rs generate its own plots (as opposed to using cargo-criterion)
html_reports = []

# Make Criterion.rs usable outside of cargo-criterion.
cargo_bench_support = []

# Make Criterion.rs generate CSV files. This feature is deprecated in favor of
# cargo-criterion's --message-format=json option.
csv_output = ["dep:csv"]

[workspace]
exclude = ["cargo-criterion"]
resolver = "2"

[[bench]]
name    = "bench_main"
harness = false

[lib]
bench = false

# Enable all of the async runtimes for the docs.rs output
[package.metadata.docs.rs]
features = ["async_futures", "async_smol", "async_std", "async_tokio"]
