[package]
name = "criterion_bencher_compat"
version = "0.4.0"
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2021"

description = "Drop-in replacement for commonly-used parts of Bencher"
homepage = "https://bheisler.github.io/criterion.rs/book/index.html"
repository = "https://github.com/bheisler/criterion.rs"
readme = "README.md"
keywords = ["criterion", "benchmark"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

[dependencies]
criterion = { version = "0.4.0", path = "..", default-features = false }

[features]
real_blackbox = ["criterion/real_blackbox"]
default = []

[[bench]]
name = "bencher_example"
harness = false

[workspace]
