[package]
name = "criterion-macro"
version = "0.3.1"
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2018"

description = "Custom Test Framework macro for Criterion.rs"
homepage = "https://bheisler.github.io/criterion.rs/book/index.html"
repository = "https://github.com/bheisler/criterion.rs"
readme = "README.md"
keywords = ["criterion", "benchmark", "macro"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"

[dev-dependencies]
criterion = { version = "0.3.1", path = "..", default-features = false }

[[bench]]
name = "test_macro_bench"

[workspace]