[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Brook Heisler <brookheisler@gmail.com>"]
name = "criterion-plot"
version = "0.5.0"
edition = "2021"

description = "Criterion's plotting library"
repository = "https://github.com/bheisler/criterion.rs"
readme = "README.md"
keywords = ["plotting", "gnuplot", "criterion"]
categories = ["visualization"]
license = "MIT OR Apache-2.0"

[dependencies]
cast = "0.3"

[dev-dependencies]
num-complex = { version = "0.4", default-features = false, features = ["std"] }
rand = "0.8"

[badges]
maintenance = { status = "looking-for-maintainer" }
