[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Brook Heisler <brookheisler@gmail.com>"]
name = "criterion-stats"
version = "0.2.0"

description = "Criterion's statistics library"
repository = "https://github.com/japaric/criterion.rs"
readme = "README.md"
keywords = ["statistics", "stats", "criterion"]
license = "MIT/Apache-2.0"

[dependencies]
cast = "0.2"
num-traits = "0.2"
num_cpus = "1"
rand = "0.4"
thread-scoped = "1.0.2"

[dev-dependencies]
approx = "0.1.1"
itertools-num = "0.1"
quickcheck = { version = "0.6", default-features = false }
criterion = { path="..", version="0.2.0" }

[badges]
travis-ci = { repository = "japaric/criterion.rs" }
appveyor = { repository = "japaric/criterion.rs", id = "4255ads9ctpupcl2" }
maintenance = { status = "actively-developed" }

[[bench]]
name = "univariate_kde"
harness = false

[[bench]]
name = "univariate_sample"
harness = false

[[bench]]
name = "univariate_bootstrap"
harness = false

[[bench]]
name = "bivariate_regression"
harness = false

[[bench]]
name = "bivariate_bootstrap"
harness = false
