[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Brook Heisler <brookheisler@gmail.com>"]
name = "criterion-stats"
version = "0.3.0"

description = "Criterion's statistics library"
repository = "https://github.com/bheisler/criterion.rs"
documentation = "https://docs.rs/criterion-stats"
readme = "README.md"
keywords = ["statistics", "stats", "criterion"]
license = "MIT/Apache-2.0"

[dependencies]
cast = "0.2"
num-traits = "0.2"
rand = "~0.4"   # 0.4 is required to maintain compatibility with Rust 1.20
rayon = "1.0.3"

[dev-dependencies]
approx = "0.3"
itertools-num = "0.1"
quickcheck = { version = "0.6", default-features = false } # 0.6 is required to maintain compatibility with Rust 1.20
criterion = { path="..", version="0.2", default-features = false }

[badges]
travis-ci = { repository = "bheisler/criterion.rs" }
appveyor = { repository = "bheisler/criterion.rs", id = "4255ads9ctpupcl2" }
maintenance = { status = "passively-maintained" }

[[bench]]
name = "univariate_kde"
harness = false

[[bench]]
name = "univariate_sample"
harness = false

[[bench]]
name = "univariate_bootstrap"
harness = false

[[bench]]
name = "bivariate_regression"
harness = false

[[bench]]
name = "bivariate_bootstrap"
harness = false
